[gd_scene load_steps=3 format=3]

[ext_resource type="Script" uid="uid://c46df14k8admc" path="res://scripts/hud.gd" id="1"]
[ext_resource type="Script" path="res://scripts/speed_lines.gd" id="2"]

; ─────────────────────────────────────────────────────────────────────────────
; HUD – extracted from Player.tscn so all UI lives in one dedicated scene.
; hud.gd's @onready paths use $Control/... relative to this CanvasLayer root,
; so they work identically whether HUD is standalone or instanced in Player.
; ─────────────────────────────────────────────────────────────────────────────
[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopLeft" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 130.0
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14

[node name="VBox" type="VBoxContainer" parent="Control/TopLeft"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HungerLabel" type="Label" parent="Control/TopLeft/VBox"]
layout_mode = 2
text = "Hunger  100 / 100"

[node name="HungerBar" type="ProgressBar" parent="Control/TopLeft/VBox"]
custom_minimum_size = Vector2(260, 22)
layout_mode = 2
value = 100.0

[node name="StarvationLabel" type="Label" parent="Control/TopLeft/VBox"]
visible = false
modulate = Color(1, 0.25, 0.25, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "STARVING  dying in 10.0s"

[node name="DeathLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -36.0
offset_right = 140.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 48
text = "YOU DIED"
horizontal_alignment = 1
vertical_alignment = 1

; ── Speed lines – full-screen radial streaks that appear at high velocity ──────
[node name="SpeedLines" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")

; ── Crosshair – white + (neutral) or yellow + (vine in range) ─────────────────
[node name="Crosshair" type="Label" parent="Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -10.0
offset_right = 8.0
offset_bottom = 10.0
modulate = Color(1, 1, 1, 0.7)
theme_override_font_sizes/font_size = 20
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

; ── Combo counter – appears just below the crosshair when streak ≥ 2 ───────────
[node name="ComboLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 26.0
offset_right = 60.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 28
text = "×2"
horizontal_alignment = 1
vertical_alignment = 1
